# lightspeed-providers

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  run.yaml
.claude/commands/: file-dependabot-cves.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: bandit.yaml  black.yaml  e2e_tests.yaml  mypy.yaml  publish-packages.yml  pylint.yaml  unit-tests.yml
lightspeed_stack_providers/providers/inline/agents/: __init__.py
lightspeed_stack_providers/providers/inline/agents/lightspeed_inline_agent/: README.md  __init__.py  agent_instance.py  agents.py  config.py
lightspeed_stack_providers/providers/inline/agents/lightspeed_inline_agent/responses/: __init__.py  openai_responses.py
lightspeed_stack_providers/providers/inline/safety/aap_inventory_validator/: __init__.py  aap_inventory_tool.py  config.py  safety.py
lightspeed_stack_providers/providers/inline/safety/lightspeed_question_validity/: __init__.py  config.py  safety.py
lightspeed_stack_providers/providers/inline/safety/lightspeed_redaction/lightspeed_redaction/: __init__.py  config.py  redaction.py
lightspeed_stack_providers/providers/remote/solr_vector_io/: __init__.py
lightspeed_stack_providers/providers/remote/solr_vector_io/solr_vector_io/: README.md  conftest.py  pyproject.toml  tests.py
lightspeed_stack_providers/providers/remote/solr_vector_io/solr_vector_io/src/: __init__.py
lightspeed_stack_providers/providers/remote/solr_vector_io/solr_vector_io/src/solr_vector_io/: __init__.py  config.py  filter_helpers.py  solr.py
lightspeed_stack_providers/providers/remote/tool_runtime/lightspeed_aap/: __init__.py  auth_type.py  config.py  lightspeed_aap.py
lightspeed_stack_providers/resources/external_providers/inline/agents/: lightspeed_inline_agent.yaml
lightspeed_stack_providers/resources/external_providers/inline/safety/: lightspeed_question_validity.yaml
lightspeed_stack_providers/resources/external_providers/remote/tool_runtime/: lightspeed.yaml
providers/agents/lightspeed-agent/: README.md  pyproject.toml
providers/agents/lightspeed-inline-agent/: README.md  pyproject.toml
providers/inference/: .gitkeep
providers/safety/lightspeed-question-validity/: README.md  pyproject.toml
providers/safety/lightspeed-redaction/: README.md  pyproject.toml
providers/tool-groups/: .gitkeep
providers/tool-runtime/lightspeed-tool-runtime/: README.md  pyproject.toml
providers/vector-dbs/: .gitkeep
providers/vector-io/: .gitkeep
resources/external_providers/inline/agents/: lightspeed_inline_agent.yaml
resources/external_providers/inline/safety/: aap_inventory_validator.yaml  lightspeed_question_validity.yaml  lightspeed_redaction.yaml
resources/external_providers/remote/agents/: lightspeed_agent.yaml
resources/external_providers/remote/tool_runtime/: lightspeed_aap.yaml
resources/external_providers/remote/vector_io/: solr_vector_io.yaml
scripts/: build_reorganized.py  gen_doc.py  generate_provider_template.py  test_build.py
tests/: README.md  __init__.py
tests/features/: README.md  __init__.py  environment.py  question_validity_shield.feature
tests/features/steps/: README.md  common_steps.py  question_validity_steps.py
tests/unit/: README.md  __init__.py
tests/unit/providers/: README.md
tests/unit/providers/inline/: README.md
tests/unit/providers/inline/agents/: README.md
tests/unit/providers/inline/agents/lightspeed_inline_agent/: README.md  test_agent_instance_inline_agent.py  test_agents_inline_agent.py  test_config_inline_agent.py  test_mcp_session_cleanup.py
tests/unit/providers/inline/safety/: README.md
tests/unit/providers/inline/safety/lightspeed_question_validity/: README.md  test_config_question_validity.py  test_safety_question_validity.py
tests/unit/providers/inline/safety/lightspeed_redaction/: README.md
tests/unit/providers/inline/safety/lightspeed_redaction/lightspeed_redaction/: README.md  test_config_redaction.py  test_redaction_redaction.py
tests/unit/providers/remote/: README.md
tests/unit/providers/remote/solr_vector_io/: README.md  test_doc_to_chunk.py  test_filters.py  test_solr_chunk_window.py
