[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lightspeed_stack_providers"
version = "0.4.1"
description = "Lightspeed Stack providers for llama-stack"
requires-python = ">=3.12"
dependencies = [
    "llama-stack==0.4.3",
    "llama-stack-api==0.4.4",
    "llama-stack-client==0.4.3",
    "httpx",
    "pydantic>=2.10.6",
    "litellm>=1.75.5.post1",
    "sqlalchemy>=2.0.0",
    "numpy>=1.24.0",
    "mcp>=1.23.0",
    "urllib3>=2.6.3",
    "aiohttp>=3.13.3",
    "protobuf>=6.33.5",
    "filelock>=3.20.3",
]

[tool.setuptools.packages]
find = {}

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "ruff>=0.8.0",
]
test = [
    "behave>=1.2.6",
    "requests>=2.31.0",
    "parse>=1.19.0",
    "parse-type>=0.6.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=1.0.0",
]
test-solr = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
]

[tool.ruff]
[tool.ruff.lint.flake8-tidy-imports]
banned-api = { "unittest" = { msg = "use pytest instead of unittest" }, "unittest.mock" = { msg = "use pytest-mock instead of unittest.mock" } }

