[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lightspeed_stack_providers"
version = "0.5.0"
description = "Lightspeed Stack providers for llama-stack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-stack==0.6.0",
    "llama-stack-api==0.6.0",
    "llama-stack-client==0.6.0",
    "httpx",
    "pydantic>=2.10.6",
    "litellm>=1.75.5.post1",
    "sqlalchemy>=2.0.0",
    "numpy>=1.24.0",
    "mcp>=1.23.0",
    "urllib3>=2.6.3",
    "aiohttp>=3.13.3",
    "protobuf>=6.33.5",
    "filelock>=3.20.3",
    "pypdf>=6.9.2",
    "chardet>=7.4.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "ruff>=0.8.0",
]
test = [
    "behave>=1.2.6",
    "requests>=2.31.0",
    "parse>=1.19.0",
    "parse-type>=0.6.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=1.0.0",
]
test-solr = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
]

[tool.pylint.main]
source-roots = "."

[tool.ruff]

[tool.ruff.lint]
extend-select = ["UP006", "UP007", "UP010", "UP017", "UP035", "RUF100", "B009", "B010", "DTZ005", "I001", "RET504", "RET505"]

[tool.ruff.lint.flake8-tidy-imports]
banned-api = { "unittest" = { msg = "use pytest instead of unittest" }, "unittest.mock" = { msg = "use pytest-mock instead of unittest.mock" } }

[tool.mypy]
explicit_package_bases = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
disable_error_code = "attr-defined"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pydocstyle>=6.3.0",
    "pylint>=4.0.5",
    "pytest>=8.3.2",
]

