[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightspeed-tool-runtime"
version = "0.1.12"
description = "Lightspeed tool runtime provider for llama-stack"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Lightspeed Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "llama-stack==0.2.16",
    "httpx",
    "pydantic>=2.10.6",
    "mcp",
]

[project.urls]
Homepage = "https://github.com/your-org/lightspeed-providers"
Repository = "https://github.com/your-org/lightspeed-providers"
Issues = "https://github.com/your-org/lightspeed-providers/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lightspeed_tool_runtime" = ["*.yaml", "*.yml"]

[tool.setuptools.data-files]
config = ["config/*.yaml"] 