[project]
name = "solr-vector-io"
version = "0.1.0"
description = "Read-only Solr vector_io provider for llama-stack"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "pydantic>=2.10.6",
    "llama-stack==0.2.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
embeddings = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/solr_vector_io"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "basic: Basic functionality tests (adapter init, registration, etc.)",
    "search: Search functionality tests (vector, keyword, hybrid)",
    "chunk_window: Chunk window expansion tests",
    "persistence: Persistence and KV store tests",
    "embeddings: Tests using real embedding models",
    "slow: Slow tests that should be skipped by default",
    "openai: Tests that pertain to the OpenAI API",
]
filterwarnings = [
    "ignore::pytest.PytestAssertRewriteWarning",
]
